mobile size fixes
- fix environment view aha guide
- fix modal backdrop aha guide
- fix next button not being full width
- fix aha guide button overlapping add config button

--- a/client/assets/styles/scss/components/aha-guide.scss
+++ b/client/assets/styles/scss/components/aha-guide.scss
@@ -3,6 +3,12 @@
   overflow: hidden;
   position: relative;
 
+  &.padding-md {
+    @include media(xxs) {
+      padding: 30px 15px;
+    }
+  }
+
   > .grid-block {
     overflow: visible;
   }
@@ -158,6 +164,10 @@
     color: $gray;
     margin-left: 30px;
     min-width: 30px;
+
+    @include media(xxs) {
+      margin-left: 9px;
+    }
 
     .iconnables {
       height: 100%;
