--- a/client/assets/styles/scss/layout/environment-body.scss
+++ b/client/assets/styles/scss/layout/environment-body.scss
@@ -1,6 +1,11 @@
 // environment body
 .environment-body {
   flex: 1 0 auto;
+
+  // aha guide
+  > .modal-dialog {
+    min-width: 0;
+  }
 }
 
 // card grid
