--- a/client/assets/styles/scss/modals/modals.scss
+++ b/client/assets/styles/scss/modals/modals.scss
@@ -472,6 +472,10 @@
     &.text-next {
       padding-right: 6px;
       width: 90px;
+
+      @include media(xxxs) {
+        width: auto;
+      }
     }
 
     &.float-right + .float-right {
